# NatureOfCraft

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  conanfile.txt  nob.c  premake5.lua  vcpkg.json
Editor/: CMakeLists.txt
Editor/Resources/: shader.frag  shader.vert
Editor/Resources/scripts/: outline_xray.lua  pulse_glow.lua  spin.lua
Editor/Source/: main.cpp
Editor/Source/Media/: AudioPlayer.hpp  MediaPlayer.cpp  MediaPlayer.hpp  VideoPlayer.hpp
Editor/Source/UI/: ImGuiLayer.cpp  ImGuiLayer.hpp
Game/: CMakeLists.txt
Game/Source/: main.cpp
Source/: CMakeLists.txt
Source/Assets/Private/: AssetManager.cpp  MeshLoader.cpp  MeshLoader.hpp  ModelLoader.cpp  ModelLoader.hpp  SceneSerializer.cpp  SceneSerializer.hpp  TextureLoader.cpp  TextureLoader.hpp
Source/Assets/Public/: AssetManager.hpp  MaterialData.hpp  MeshData.hpp  ModelData.hpp  TextureData.hpp
Source/Assets/Schemas/: LevelAsset.fbs  MaterialAsset.fbs  MeshAsset.fbs  ModelAsset.fbs  ProjectAsset.fbs  SceneAsset.fbs  TextureAsset.fbs
Source/Camera/Private/: Camera.cpp
Source/Camera/Public/: Camera.hpp
Source/Core/Private/: RuntimePaths.cpp
Source/Core/Public/: Core.hpp  Expected.hpp  RuntimePaths.hpp  Utils.hpp
Source/ECS/Private/: World.cpp
Source/ECS/Public/: Components.hpp  World.hpp
Source/Level/Private/: Level.cpp  LevelSerializer.cpp  LevelSerializer.hpp  Project.cpp
Source/Level/Public/: Level.hpp  Project.hpp
Source/Physics/Private/: PhysicsWorld.cpp
Source/Physics/Public/: PhysicsWorld.hpp
Source/Rendering/BackEnds/Private/: Vulkan.cpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanSwapchain.cpp
Source/Rendering/BackEnds/Public/: Vulkan.hpp  VulkanDevice.hpp  VulkanPipeline.hpp  VulkanSwapchain.hpp
Source/Rendering/Private/: ShaderCompiler.cpp
Source/Rendering/Public/: IRenderer.hpp  Mesh.hpp  Renderable.hpp  ShaderCompiler.hpp
Source/Runtime/Private/: ProjectPipeline.cpp
Source/Runtime/Public/: ProjectPipeline.hpp
Source/Scene/Private/: Scene.cpp  SceneNode.cpp
Source/Scene/Public/: Scene.hpp  SceneNode.hpp  Transform.hpp
Source/Scripting/Private/: ScriptEngine.cpp
Source/Scripting/Public/: LuaBindings.hpp  ScriptEngine.hpp
Source/Window/Private/: Window.cpp
Source/Window/Public/: Window.hpp
Tools/: CMakeLists.txt
Tools/Source/: main.cpp
src/: Window.cpp  main.cpp
src/Core/Public/: Expected.hpp  Utils.hpp
src/Include/: Expected.hpp  Window.hpp  core.hpp  expected.hpp
src/Rendering/BackEnds/Private/: Vulkan.cpp
src/Rendering/BackEnds/Public/: Vulkan.hpp
src/Window/Private/: Window.cpp
src/Window/Public/: Window.hpp
